--- a/css/isaiahstyles.css
+++ b/css/isaiahstyles.css
@@ -1,9 +1,12 @@
 body {
-  background-color: LightBlue;
+  background-color: burlywood;
 }
 
 img {
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 
 h1, h2 {
@@ -22,9 +25,6 @@ p {
   grid-row-gap: 12px;
 }
 
-.image img {
-  width: 100%;
-}
 
 .border {
   border-width: thin;
